; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/decklink/extr_audio-repack.c_repack_squash_swap.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/decklink/extr_audio-repack.c_repack_squash_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio_repack = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repack_squash_swap(%struct.audio_repack* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.audio_repack*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.audio_repack* %0, %struct.audio_repack** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %14 = load %struct.audio_repack*, %struct.audio_repack** %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @check_buffer(%struct.audio_repack* %14, i32 %15)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %53

19:                                               ; preds = %3
  %20 = load %struct.audio_repack*, %struct.audio_repack** %5, align 8
  %21 = getelementptr inbounds %struct.audio_repack, %struct.audio_repack* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  store i32 %22, i32* %8, align 4
  %23 = load i32*, i32** %6, align 8
  store i32* %23, i32** %9, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32, i32* %7, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  store i32* %27, i32** %10, align 8
  %28 = load %struct.audio_repack*, %struct.audio_repack** %5, align 8
  %29 = getelementptr inbounds %struct.audio_repack, %struct.audio_repack* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = inttoptr i64 %30 to i32*
  store i32* %31, i32** %11, align 8
  br label %32

32:                                               ; preds = %36, %19
  %33 = load i32*, i32** %9, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = icmp ne i32* %33, %34
  br i1 %35, label %36, label %52

36:                                               ; preds = %32
  %37 = load i32*, i32** %9, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 1
  store i32* %38, i32** %9, align 8
  %39 = ptrtoint i32* %37 to i32
  %40 = call i32 @_mm_load_si128(i32 %39)
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = call i32 @_MM_SHUFFLE(i32 2, i32 3, i32 1, i32 0)
  %43 = call i32 @_mm_shufflelo_epi16(i32 %41, i32 %42)
  store i32 %43, i32* %13, align 4
  %44 = load i32*, i32** %11, align 8
  %45 = load i32, i32* %13, align 4
  %46 = call i32 @_mm_storeu_si128(i32* %44, i32 %45)
  %47 = load i32, i32* %8, align 4
  %48 = sub nsw i32 8, %47
  %49 = load i32*, i32** %11, align 8
  %50 = sext i32 %48 to i64
  %51 = getelementptr inbounds i32, i32* %49, i64 %50
  store i32* %51, i32** %11, align 8
  br label %32

52:                                               ; preds = %32
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %52, %18
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i64 @check_buffer(%struct.audio_repack*, i32) #1

declare dso_local i32 @_mm_load_si128(i32) #1

declare dso_local i32 @_mm_shufflelo_epi16(i32, i32) #1

declare dso_local i32 @_MM_SHUFFLE(i32, i32, i32, i32) #1

declare dso_local i32 @_mm_storeu_si128(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
